Fixed close button's z-index

--- a/assets/css/_trip-show.scss
+++ b/assets/css/_trip-show.scss
@@ -30,6 +30,7 @@
           float: right;
           margin-right: 0.25rem;
           margin-top: 0.25rem;
+          z-index: 5;
         }
 
         h4 {
